--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "15.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "@eslint/eslintrc": "^3"
